--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* 
+
 /* Your CSS Code here. */
 p{
 	width:300px;
@@ -7,11 +7,11 @@ p{
 	padding:50px;
 	margin:20px;
 	
-} */
-div{
+}
+/* div{
 	width:300px;
 	background-color:lightblue;
 	border:15px solid blue;
 	padding:50px;
 	margin:20px;
-}
+} */
