--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,9 @@
 
-/* Your CSS Code here. */
-p{
-	width:300px;
+.box{
 	background-color:lightblue;
+	width:300px;
+
 	border:15px solid blue;
 	padding:50px;
 	margin:20px;
-	
 }
-/* div{
-	width:300px;
-	background-color:lightblue;
-	border:15px solid blue;
-	padding:50px;
-	margin:20px;
-} */
